Try to make horizontal scrolling work again by adding a fixed background behind buckets. Again, doesn't work. If I make the parent relative then it scrolls when everything else scrolls; if I make it fixed then it doesn't scroll vertically.

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -22,20 +22,24 @@ label
 	max-height: 70vh
 	max-width: 90vw
 	overflow-y: auto
+	.leftHeader
+		background-color: white
+		z-index: 1
+		position: relative
+		.bucket
+			color: white
+			background-color: black
+			padding-left: 2px
+			height: 1em
+			width: 15em
+			position: fixed
+			cursor: default
+			disabled: true
 	.header
 		position: absolute
 		cursor: default
 		disabled: true
 	.divider
-		position: absolute
-		cursor: default
-		disabled: true
-	.bucket
-		color: white
-		background-color: black
-		padding-left: 2px
-		height: 1em
-		width: 15em
 		position: absolute
 		cursor: default
 		disabled: true
